--- a/package.json
+++ b/package.json
@@ -6,14 +6,27 @@
   "license": {
     "type": "MIT",
     "url": "https://www.opensource.org/licenses/mit-license.php"
-    },
+  },
   "scripts": {
-    "build": "babel js -d build"
+    "build": "webpack --config webpack.config.js",
+    "start": "webpack-dev-server --mode production --open"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.0",
-    "@babel/preset-react": "^7.0.0"
+    "@babel/preset-react": "^7.0.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.4",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "webpack": "^4.28.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
+  },
+  "dependencies": {
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-visibility-sensor": "^5.0.2"
   }
 }
